Webpack bundle analyzer

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -27,6 +27,9 @@ body {
 
         .joke{
             color: #000;
+            text-align: center;
+            font-size: 12px;
+            padding: 10px;
         }
 
         .btn {
